# SparkFun_Ambient_Sensor_VEML6030

./: .gitignore  CMakeLists.txt  README.md  SparkFun_VEML6030_Ambient_Light_Sensor.cpp  SparkFun_VEML6030_Ambient_Light_Sensor.h  cli_light_sensor.cpp  display_i2c_light_sensor.cpp  display_i2c_light_sensor.h  display_i2c_light_sensor.ui  display_i2c_light_sensor_main.cpp
build-display_i2c_light_sensor-Desktop_Qt_5_11_3_GCC_armhf-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
build-display_i2c_light_sensor-Desktop_Qt_5_15_1_GCC_64bit-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  display_i2c_light_sensor
build-display_i2c_light_sensor-Desktop_Qt_5_15_1_GCC_64bit-Debug/.cmake/api/v1/reply/: target-display_i2c_light_sensor_autogen-6b8a91a524c31a3beb4c.json
build-display_i2c_light_sensor-Desktop_Qt_5_15_1_GCC_64bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-00f150b3b7ee639b8323.json  cmakeFiles-v1-9d2f2b2a5d17daeb96c9.json  codemodel-v2-cf2379fcf7ebb6fdaabf.json  index-2021-05-29T00-43-31-0512.json  target-display_i2c_light_sensor-5e80e7e30fe8ad1395d1.json
build-display_i2c_light_sensor-Desktop_Qt_5_15_1_GCC_64bit-Debug/display_i2c_light_sensor_autogen/: moc_predefs.h  mocs_compilation.cpp
build-display_i2c_light_sensor-Desktop_Qt_5_15_1_GCC_64bit-Debug/display_i2c_light_sensor_autogen/EWIEGA46WW/: moc_display_i2c_light_sensor.cpp
build-display_i2c_light_sensor-Desktop_Qt_5_15_1_GCC_64bit-Debug/display_i2c_light_sensor_autogen/include/: ui_display_i2c_light_sensor.h
